# CustomerAssitent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test.db
.github/workflows/: ci.yml
app/: config.py
app/database/: db.py
app/dependencies/: dependecies.py
app/models/: models.py
app/routers/: ai_service.py  login.py  signup.py  tickets.py
app/schemas/: auth_schema.py  tickets_schema.py
app/services/: service_ticket.py  ticket_service.py  user_service.py
backend/: config.py  main.py  pyproject.toml
backend/models/: reservation.py
backend/routers/: reservations.py
tests/: conftest.py  test_login.py  test_signup.py  test_ticket_service.py
